[package]
name = "activemq"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6"]

[dependencies]
cxx = "1.0"
lazy_static = "1.4.0"
activemq-rs =   { path = "../" }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
